--- a/BI586_MarkdownTut_ES.rmd
+++ b/BI586_MarkdownTut_ES.rmd
@@ -2,7 +2,7 @@
 title: "BI586_MarkdownTut"
 author: "Erica Sun"
 date: "February 11, 2021"
-output: "word_document"
+output: "html_document"
 ---
 
 ## R Markdown
@@ -60,6 +60,7 @@ You can also do inline code using a pair of backticks (e.g. did you know 2+2+2+=
 
 You can insert an R code chunk either using the RStudio toolbar (the Insert button) or the keyboard shortcut `Ctrl + Alt + I` (`Cmd + Option + I` on macOS).
 
+
 There are a lot of things you can do in a code chunk: you can produce text output, tables, or graphics. You have fine control over all these output via chunk options, which can be provided inside the curly braces (between ```{r and }). For example, you can choose hide text output via the chunk option results = 'hide', or set the figure height to 4 inches via fig.height = 4. Chunk options are separated by commas, e.g.,
 
 ```{r, chunk-label, result='hide'}
@@ -72,7 +73,7 @@ There are a large number of chunk options in knitr documented at https://yihui.n
 #Question 5
 **Create a code chunk that will not show the code in your knitted html (this is nice if someone just wants the output
 and doesn't care about the code) Use the above link to figure out how to do this**
-```{r, results='hide'}
+```{r,  echo=FALSE}
 # this chunk of R code should not show up in the knitted file
 six = 2 + 4
 ```
@@ -89,20 +90,100 @@ two = 2
 ## Including Plots
 You can embed plots into your rmarkdown pretty easily. You can also add a figure caption using fig.cap in the chunk options
 
-```{r pressure, fig.cap= "enter caption here"}
+```{r pressure, fig.cap= "The pressure plot"}
 plot(pressure)
 ```
-
-If you want to include a graphic from your computer you can use the knitr::include_graphics() function 
-
-```{r, fig.cap="caption", eval=FALSE}
-knitr::include_graphics('yourimagename.png')
-```
-
 #Question 7 
 **Add any png to your markdown html**
 
+If you want to include a graphic from your computer you can use the knitr::include_graphics() function 
+
+```{r, fig.cap="Piemap"}
+knitr::include_graphics('/Users/ericasun/Documents/GitHub/BI586/piemap.png')
+```
+
+
 #Question 8 Converting your R lab to an rmarkdown file
 **Take the code from your R lab last week (starting at Question 9 until the plotting section) and convert it to an rmarkdown format. This should include both my questions/notes PLUS your answers. Format it in a way so when you knit it into an html it is very readible imagine you were making an R walkthrough for someone else. (Use headers, get rid of #s, break code into chunks, limit unnecessary code output, supress warnings etc). Check out the links at the beginning of this tutorial for other ways to prettify your rmarkdown!**
+
+##PROBLEM 9 Write code that will print the column name for column 3 and the rowname for row 4 
+```{r}
+colnames(Data)[3]
+rownames(Data)[4]
+```
+
+
+Sometimes you will want to subset a dataframe to include only specific columns or only certain values
+In our wasting data file we have a column called Transect.
+We can view the values of this column by simpling clicking on the variable "Data" in our global environment OR
+we can have R print out all the values of this column
+```{r}
+Data$Transect
+```
+If you don't want R to barf up all the values but you are interested in how many unique values there are for this column
+you can look at this column's levels
+```{r}
+Data$Transect = as.factor(Data$Transect)
+levels(Data$Transect)
+```
+
+
+#PROBLEM 10 How many levels does the column "Transect" have?
+4 levels
+Lets say we want to create a dataframe that only has data for transect A, we can do this a few different ways
+one way is to use the filter function from the package dplyr
+```{r}
+TransectA = filter(Data, Transect == "A")
+head(TransectA)
+```
+
+#PROBLEM 11: How many rows are in your new dataframe TransectA?
+```{r}
+nrow(TransectA)
+```
+#PROBLEM 12 Create a dataframe that consistes of only data from Transect A AND Transect B
+How many rows are in this new dataframe? (Show your code)
+```{r}
+TransectA = filter(Data, Transect == "A")
+TransectB = filter(Data, Transect == "B")
+df <- data_frame(TransectA, TransectB)
+```
+
+
+Maybe we don't care about most of these columns and want to just work with the first three
+```{r}
+InfoTransectA=TransectA[,1:3]
+head(InfoTransectA)
+```
+
+#How do we save stuff that we can create in R?
+Even though you can save your script with a simple ctrl+S, this is just saving the instructions
+sometimes we want to save an output so we don't have to run through our whole code again to look at it. 
+One way of doing this is saving EVERYTHING in your global environment 
+```{r}
+save.image(file="filename.RData")
+```
+
+#You have now saved your global environment, go ahead and click the broom icon above your global environment pane 
+#to clear the global environment
+#now to re-load your saved global environment
+load(file="filename.RData")
+#You can also save files as .csv or a space separated file
+write.csv(InfoTransectA, file="InfoTranectA.csv") #csv
+write.table(InfoTransectA, file="InfoTransectA.txt",sep=" ")# space separated file
+write.table(InfoTransectA, file="InfoTransectA.tab", sep="\t")#tab separated file
+
+######You can feel free to end the assignment here as we will spend a lot of time
+##on data visualization in this course. 
+
+##########BONUS Plotting!!!!!!##################
+#Go through this plotting tutorial, entering the code into your own R environment
+#http://r-statistics.co/Complete-Ggplot2-Tutorial-Part1-With-R-Code.html
+
+
+#BONUS PROBLEM make a PDF of a barplot titled "Awesome_barplot.pdf" where all factors are of some shade of red. 
+#No x axis label 
+library(ggplot2)
+ggplot(Data, aes(x = Site)) + geom_bar(color = "red", fill = "pink") + theme_classic() + ggtitle("Awesome_barplot")
 
 ##Make sure you send both your .Rmd file AND the html to me (jfifer@bu.edu)##
